actualizado, falta realizar la devolucion de los productos al stock una vez se cancele la venta

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.datasource.username=root
 spring.datasource.password=12345678
 
 # Configuraci\u00F3n de JPA
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.jdbc.time_zone=America/Bogota
 
